--- a/nginx.conf
+++ b/nginx.conf
@@ -4,9 +4,9 @@ server	{
 		return 404;
 	}
 	location /uploads/ {
-		root	~/web/uploads/;
+		root	/home/box/web/uploads/;
 	}
-	location ~* \.\w+$ {
-		root	~web/public/;
+	location ~*^.+\.\w+$ {
+		root	/home/box/web/public/;
 	}
 }
