--- a/nginx.conf
+++ b/nginx.conf
@@ -1,15 +1,17 @@
-server	{
-	listen 80 default_server;
+server {
 
-	location /uploads/ {
-		root	/home/box/web/uploads/;
-	}
+  listen 80 default;
 
-	location ~*^.+\.\w+$ {
-		root	/home/box/web/public/;
-	}
+  location ^~ /uploads/ {
+    root /home/box/web;
+  }
 
-	location / {
-		return 404;
-	}
+  location ~* ^.+\.\w+$ {
+    root /home/box/web/public;
+  }
+
+  location / {
+    return 404;
+  }
+  
 }
